--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
   <title>Welcome to The Codex</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
-  <!-- Header with name + avatar -->
+  <!-- Header with avatar, name, and contact icons -->
   <header class="header">
-    <img src="avatar.jpg" alt="Your Avatar" class="avatar">
-    <h1 class="name">Yume</h1>
+    <img src="avatar.jpg" alt="Avatar" class="avatar">
+    <div class="header-info">
+      <h1 class="name">Clue Y. Encilis</h1>
+      <div class="social-icons">
+        <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="mailto:youremail@example.com" title="Email"><i class="fas fa-envelope"></i></a>
+      </div>
+    </div>
   </header>
 
   <!-- Section Cards -->
@@ -37,4 +47,4 @@
   </main>
 
 </body>
-  </html>
+</html>
