--- a/index.html
+++ b/index.html
@@ -10,22 +10,29 @@
 </head>
 <body>
 
-  <!-- Header with avatar, name, and contact icons -->
-  <header class="header">
-    <img src="avatar.jpg" alt="Avatar" class="avatar">
-    <div class="header-info">
-      <h1 class="name">Clue Y. Encilis</h1>
-      <div class="social-icons">
-        <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
-        <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-        <a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
-        <a href="mailto:youremail@example.com" title="Email"><i class="fas fa-envelope"></i></a>
+  <!-- Top Contact Card -->
+  <header class="contact-card">
+    <div class="contact-left">
+      <img src="avatar.jpg" alt="Avatar" class="avatar">
+      <div class="info">
+        <h1 class="name">Clue Y. Encilis</h1>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a>
+        </div>
       </div>
     </div>
   </header>
 
-  <!-- Section Cards -->
+  <!-- Animated Banner -->
+  <section class="banner">
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyc2pnbmcxeGVoMWdtNjIxajVvdXhiMnZoNWFyZDVyMnN0enFsM3RneiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
+  </section>
+
+  <!-- Navigation Cards -->
   <main class="card-wrapper">
     <div class="container">
       <h2 class="title">The Codex</h2>
