--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-  <!-- Top Contact Card -->
+  <!-- Full-width top contact section, top-left aligned -->
   <header class="contact-card">
     <div class="contact-left">
-      <img src="avatar.jpg" alt="Avatar" class="avatar">
+      <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
       <div class="info">
         <h1 class="name">Clue Y. Encilis</h1>
         <div class="social-icons">
@@ -27,9 +27,9 @@
     </div>
   </header>
 
-  <!-- Animated Banner -->
+  <!-- Banner Section -->
   <section class="banner">
-    <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyc2pnbmcxeGVoMWdtNjIxajVvdXhiMnZoNWFyZDVyMnN0enFsM3RneiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
+    <img src="https://media2.giphy.com/media/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
   </section>
 
   <!-- Navigation Cards -->
