--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Banner Section -->
   <section class="banner">
-    <img src="https://media2.giphy.com/media/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
+    <img src="https://cdn.pixabay.com/animation/2023/01/26/05/20/05-20-36-559_512.gif" alt="Animated Banner">
   </section>
 
   <!-- Navigation Cards -->
