--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Full-width top contact section, top-left aligned -->
   <header class="contact-card">
     <div class="contact-left">
-      <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
+      <img src="https://cdn.pixabay.com/animation/2025/05/22/09/23/09-23-24-723_512.gif" alt="Avatar" class="avatar">
       <div class="info">
         <h1 class="name">Clue Y. Encilis</h1>
         <div class="social-icons">
