--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Full-width top contact section, top-left aligned -->
   <header class="contact-card">
     <div class="contact-left">
-      <img src="https://cdn.pixabay.com/animation/2025/05/22/09/23/09-23-24-723_512.gif" alt="Avatar" class="avatar">
+      <img src="https://images.pexels.com/photos/1654748/pexels-photo-1654748.jpeg" alt="Avatar" class="avatar">
       <div class="info">
         <h1 class="name">Clue Y. Encilis</h1>
         <div class="social-icons">
@@ -29,7 +29,7 @@
 
   <!-- Banner Section -->
   <section class="banner">
-    <img src="https://cdn.pixabay.com/animation/2023/01/26/05/20/05-20-36-559_512.gif" alt="Animated Banner">
+    <img src="https://images.pexels.com/photos/701816/pexels-photo-701816.jpeg" alt="Animated Banner">
   </section>
 
   <!-- Navigation Cards -->
