--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Banner Section -->
   <section class="banner">
-    <img src="https://images.pexels.com/photos/701816/pexels-photo-701816.jpeg" alt="Animated Banner">
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyZDl6bHlhc28yemRodnJuczJodmI2emhramg1dWF3ZjNsang1Y2dmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/11ddSQcXhOAZLa/giphy.gif" alt="Animated Banner">
   </section>
 
   <!-- Navigation Cards -->
