--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyZDl6bHlhc28yemRodnJuczJodmI2emhramg1dWF3ZjNsang1Y2dmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/11ddSQcXhOAZLa/giphy.gif" alt="Animated Banner">
   </section>
 
+<!-- Welcome Statement -->
+<section class="welcome-message">
+  <p>Welcome to my digital atelier — a personal anthology of crafted works, quiet reflections, and living thoughts.</p>
+</section>
+
   <!-- Navigation Cards -->
   <main class="card-wrapper">
     <div class="container">
