--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
 <!-- Welcome Statement -->
 <section class="welcome-message">
-  <p>Welcome to my digital atelier — a personal anthology of crafted works, quiet reflections, and living thoughts.</p>
+  <p>
+    Welcome to <strong>The Codex</strong> — a curated space where ideas, experiences, and creative work converge. This site serves as both a personal archive and professional portfolio, offering insight into my process, my values, and the evolving nature of my craft. Whether you're here to explore past projects, read through reflective writing, or connect professionally, I invite you to navigate with curiosity and intention.
+  </p>
 </section>
 
   <!-- Navigation Cards -->
