--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Welcome to The Codex</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Full-width top contact section, top-left aligned -->
+  <!-- Contact Header -->
   <header class="contact-card">
     <div class="contact-left">
-      <img src="https://images.pexels.com/photos/1654748/pexels-photo-1654748.jpeg" alt="Avatar" class="avatar">
+      <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
       <div class="info">
         <h1 class="name">Clue Y. Encilis</h1>
         <div class="social-icons">
@@ -27,31 +27,37 @@
     </div>
   </header>
 
-  <!-- Banner Section -->
+  <!-- Banner -->
   <section class="banner">
     <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyZDl6bHlhc28yemRodnJuczJodmI2emhramg1dWF3ZjNsang1Y2dmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/11ddSQcXhOAZLa/giphy.gif" alt="Animated Banner">
   </section>
 
-  <!-- Navigation Cards -->
-  <main class="card-wrapper">
-    <div class="container">
-      <h2 class="title">The Codex</h2>
-      <p class="subtitle">A manuscript of memory and identity.</p>
-      <a href="about.html" class="btn">Enter</a>
+  <!-- Split Layout: Cards on Left, Welcome on Right -->
+  <section class="split-wrapper">
+    <div class="card-wrapper">
+      <div class="container">
+        <h2 class="title">The Codex</h2>
+        <p class="subtitle">A manuscript of memory and identity.</p>
+        <a href="about.html" class="btn">Enter</a>
+      </div>
+
+      <div class="container">
+        <h2 class="title">The Portfolio</h2>
+        <p class="subtitle">Where hands shape the unseen into form.</p>
+        <a href="portfolio.html" class="btn">Enter</a>
+      </div>
+
+      <div class="container">
+        <h2 class="title">The Notebook</h2>
+        <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
+        <a href="blog.html" class="btn">Enter</a>
+      </div>
     </div>
 
-    <div class="container">
-      <h2 class="title">The Portfolio</h2>
-      <p class="subtitle">Where hands shape the unseen into form.</p>
-      <a href="portfolio.html" class="btn">Enter</a>
+    <div class="welcome-message">
+      Welcome to The Codex — a curated space where identity meets creativity. Explore thoughtful fragments, passionate craftsmanship, and reflections woven into every word and work.
     </div>
-
-    <div class="container">
-      <h2 class="title">The Notebook</h2>
-      <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
-      <a href="blog.html" class="btn">Enter</a>
-    </div>
-  </main>
+  </section>
 
 </body>
 </html>
