--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Welcome to The Codex</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Contact Header -->
+  <!-- Sticky Contact Header -->
   <header class="contact-card">
     <div class="contact-left">
       <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
@@ -27,37 +27,36 @@
     </div>
   </header>
 
-  <!-- Banner -->
+  <!-- Animated Banner -->
   <section class="banner">
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyZDl6bHlhc28yemRodnJuczJodmI2emhramg1dWF3ZjNsang1Y2dmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/11ddSQcXhOAZLa/giphy.gif" alt="Animated Banner">
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyc2pnbmcxeGVoMWdtNjIxajVvdXhiMnZoNWFyZDVyMnN0enFsM3RneiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
   </section>
 
-  <!-- Split Layout: Cards on Left, Welcome on Right -->
-  <section class="split-wrapper">
-    <div class="card-wrapper">
-      <div class="container">
-        <h2 class="title">The Codex</h2>
-        <p class="subtitle">A manuscript of memory and identity.</p>
-        <a href="about.html" class="btn">Enter</a>
-      </div>
-
-      <div class="container">
-        <h2 class="title">The Portfolio</h2>
-        <p class="subtitle">Where hands shape the unseen into form.</p>
-        <a href="portfolio.html" class="btn">Enter</a>
-      </div>
-
-      <div class="container">
-        <h2 class="title">The Notebook</h2>
-        <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
-        <a href="blog.html" class="btn">Enter</a>
-      </div>
-    </div>
-
-    <div class="welcome-message">
-      Welcome to The Codex — a curated space where identity meets creativity. Explore thoughtful fragments, passionate craftsmanship, and reflections woven into every word and work.
-    </div>
+  <!-- Professional Welcome Message -->
+  <section class="welcome-message">
+    Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
+
+  <!-- Navigation Cards -->
+  <main class="card-wrapper">
+    <div class="container">
+      <h2 class="title">The Codex</h2>
+      <p class="subtitle">A manuscript of memory and identity.</p>
+      <a href="about.html" class="btn">Enter</a>
+    </div>
+
+    <div class="container">
+      <h2 class="title">The Portfolio</h2>
+      <p class="subtitle">Where hands shape the unseen into form.</p>
+      <a href="portfolio.html" class="btn">Enter</a>
+    </div>
+
+    <div class="container">
+      <h2 class="title">The Notebook</h2>
+      <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
+      <a href="blog.html" class="btn">Enter</a>
+    </div>
+  </main>
 
 </body>
 </html>
