--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,10 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-<body>
-
-  <!-- Sticky Contact Header -->
-  <header class="contact-card">
+<body>  <!-- Sticky Contact Header -->  <header class="contact-card">
     <div class="contact-left">
       <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
       <div class="info">
@@ -25,38 +21,26 @@
         </div>
       </div>
     </div>
-  </header>
-
-  <!-- Animated Banner -->
-  <section class="banner">
+  </header>  <!-- Animated Banner -->  <section class="banner">
     <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyc2pnbmcxeGVoMWdtNjIxajVvdXhiMnZoNWFyZDVyMnN0enFsM3RneiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
-  </section>
-
-  <!-- Professional Welcome Message -->
-  <section class="welcome-message">
+  </section>  <!-- Professional Welcome Message -->  <section class="welcome-message">
     Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
-  </section>
-
-  <!-- Navigation Cards -->
-  <main class="card-wrapper">
+  </section>  <!-- Navigation Cards -->  <main class="card-wrapper">
     <div class="container">
       <h2 class="title">The Codex</h2>
       <p class="subtitle">A manuscript of memory and identity.</p>
       <a href="about.html" class="btn">Enter</a>
-    </div>
+    </div><div class="container">
+  <h2 class="title">The Portfolio</h2>
+  <p class="subtitle">Where hands shape the unseen into form.</p>
+  <a href="portfolio.html" class="btn">Enter</a>
+</div>
 
-    <div class="container">
-      <h2 class="title">The Portfolio</h2>
-      <p class="subtitle">Where hands shape the unseen into form.</p>
-      <a href="portfolio.html" class="btn">Enter</a>
-    </div>
+<div class="container">
+  <h2 class="title">The Notebook</h2>
+  <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
+  <a href="blog.html" class="btn">Enter</a>
+</div>
 
-    <div class="container">
-      <h2 class="title">The Notebook</h2>
-      <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
-      <a href="blog.html" class="btn">Enter</a>
-    </div>
-  </main>
-
-</body>
+  </main></body>
 </html>
