--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome to The Codex</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
+  <title>The Candlelit Codex</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&family=Rustic+Roadway&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
@@ -25,9 +25,10 @@
         </div>
       </div>
     </div>
+    <div class="site-title">The Candlelit Codex</div>
   </header>
 
-  <!-- Animated Banner -->
+  <!-- Banner Section -->
   <section class="banner">
     <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyc2pnbmcxeGVoMWdtNjIxajVvdXhiMnZoNWFyZDVyMnN0enFsM3RneiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
   </section>
