--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <div class="site-title">The Candlelit Codex</div>
   </header>
 
-  <!-- Animated Banner -->
+  <!-- Banner -->
   <section class="banner">
-    <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyc2pnbmcxeGVoMWdtNjIxajVvdXhiMnZoNWFyZDVyMnN0enFsM3RneiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xUA7b0gMfijRpBOPII/giphy.gif" alt="Animated Banner">
+    <img src="https://pin.it/us0SLiEQx" alt="Banner">
   </section>
 
   <!-- Professional Welcome Message -->
