--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Candlelit Codex</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&family=Rustic+Roadway&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.cdnfonts.com/css/rustic-roadway" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -38,7 +39,10 @@
     Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
-  <!-- Navigation Cards -->
+  <!-- Shelf Header -->
+  <section class="shelf-header">SHELF</section>
+
+  <!-- Navigation "Books" -->
   <main class="card-wrapper">
     <div class="container">
       <h2 class="title">The Codex</h2>
@@ -57,6 +61,15 @@
       <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
       <a href="blog.html" class="btn">Enter</a>
     </div>
+
+    <!-- Add more "book cards" as needed -->
+    <!--
+    <div class="container">
+      <h2 class="title">New Book</h2>
+      <p class="subtitle">Short description here.</p>
+      <a href="#" class="btn">Enter</a>
+    </div>
+    -->
   </main>
 
 </body>
