--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
-  <!-- Shelf Header -->
-  <section class="shelf-header">SHELF</section>
+  <!-- SHELF Header Section -->
+<section class="shelf-section">
+  <h2 class="shelf-header">SHELF</h2>
+  <p class="shelf-subtitle">Choose a book to enter — each holds a world of memory, craft, or dreams.</p>
+</section>
 
   <!-- Navigation "Books" -->
   <main class="card-wrapper">
