--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Candlelit Codex</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.cdnfonts.com/css/rustic-roadway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&family=Rustic+Roadway&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -34,18 +33,18 @@
     <img src="https://images.unsplash.com/photo-1605143185650-77944b152643?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Banner">
   </section>
 
-  <!-- Professional Welcome Message -->
+  <!-- Welcome Message -->
   <section class="welcome-message">
     Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
-  <!-- SHELF Header Section -->
+  <!-- Shelf Section Header -->
   <section class="shelf-section">
-  <h2 class="shelf-header">SHELF</h2>
-  <p class="shelf-subtitle">Choose a book to enter — each holds a world of memory, craft, or dreams.</p>
-</section>
+    <h2 class="shelf-header">SHELF</h2>
+    <p class="shelf-subtitle">Choose a chapter to explore — each volume unveils a different story within this candlelit collection.</p>
+  </section>
 
-  <!-- Navigation "Books" -->
+  <!-- Navigation Cards -->
   <main class="card-wrapper">
     <div class="container">
       <h2 class="title">The Codex</h2>
@@ -64,15 +63,6 @@
       <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
       <a href="blog.html" class="btn">Enter</a>
     </div>
-
-    <!-- Add more "book cards" as needed -->
-    <!--
-    <div class="container">
-      <h2 class="title">New Book</h2>
-      <p class="subtitle">Short description here.</p>
-      <a href="#" class="btn">Enter</a>
-    </div>
-    -->
   </main>
 
 </body>
