--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Candlelit Codex</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&family=Rustic+Roadway&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.cdnfonts.com/css/rustic-roadway" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -38,10 +39,14 @@
     Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
-  <!-- Shelf Section Header -->
-  <section class="shelf-section">
-    <h2 class="shelf-header">SHELF</h2>
-    <p class="shelf-subtitle">Choose a chapter to explore — each volume unveils a different story within this candlelit collection.</p>
+  <!-- SHELF Section Header -->
+  <section class="shelf-card">
+    <div class="shelf-content">
+      <h2 class="shelf-header">SHELF</h2>
+      <p class="shelf-subtitle">
+        Choose a chapter to explore — each volume unveils a different story within this candlelit collection.
+      </p>
+    </div>
   </section>
 
   <!-- Navigation Cards -->
