--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- Shelf Header -->
   <section class="shelf-section">
-    <h2 class="shelf-header">SHELF</h2>
+    <h2 class="shelf-header">THE BOOKSHELF</h2>
     <p class="shelf-subtitle">Choose a volume — each book opens a world of its own.</p>
   </section>
 
