--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div class="site-title">The Candlelit Codex</div>
   </header>
 
+  <div id="header-trigger"></div>
+
   <!-- Banner -->
   <section class="banner">
     <img src="https://images.unsplash.com/photo-1605143185650-77944b152643?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Banner">
