--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <script src="script.js"></script>
+
 <body>
+
+<div id="loader">
+  <div class="book"></div>
+  <p class="loader-text">writing the pages...</p>
+</div>
 
   <!-- Sticky Contact Header -->
   <header class="contact-card">
