--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 <body>
 
+<div id="loader">
+  <div class="book"></div>
+  <p class="loader-text">writing the pages...</p>
+</div>
+
   <!-- Sticky Contact Header -->
   <header class="contact-card">
     <div class="contact-left">
