--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
 
 <div id="loader">
-  <div class="book"></div>
+  <div class="book__page"></div>
+  <div class="book__page"></div>
+  <div class="book__page"></div>
+</div>
   <p class="loader-text">writing the pages...</p>
 </div>
 
