--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <script src="script.js"></script>
 
 <body>
-
-<div id="loader">
-  <div class="book__page"></div>
-  <div class="book__page"></div>
-  <div class="book__page"></div>
-</div>
-  <p class="loader-text">writing the pages...</p>
-</div>
+  <div id="loader">
+    <div class="book">
+      <div class="book__page"></div>
+      <div class="book__page"></div>
+      <div class="book__page"></div>
+    </div>
+    <p class="loader-text">writing the pages...</p>
+  </div>
 
   <!-- Sticky Contact Header -->
   <header class="contact-card">
