--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <script src="script.js"></script>
 
 <body>
-  <div id="loader-wrapper">
-  <div id="loader">
+  <!-- Loader Wrapper -->
+<div id="loader-wrapper">
+  <div class="book">
     <div class="book__page"></div>
     <div class="book__page"></div>
     <div class="book__page"></div>
