--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Banner -->
   <section class="banner">
-    <img src="https://c.tenor.com/I-sMuNQQtK0AAAAd/tenor.gif" alt="Banner">
+    <img src="https://images.unsplash.com/photo-1474366521946-c3d4b507abf2?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGxpZ2h0JTIwYWNhZGVtaWF8ZW58MHwwfDB8fHww" alt="Banner">
   </section>
 
   <!-- Welcome Message -->
