--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <script src="script.js"></script>
 
 <body>
+
   <!-- Loader Wrapper -->
 <div id="loader-wrapper">
+  <div class="loader-background"></div>
   <div class="book">
     <div class="book__page"></div>
     <div class="book__page"></div>
