--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
   <!-- Loader Wrapper -->
 <div id="loader-wrapper">
-  <div class="loader-background"></div>
-  <div class="book">
+  <div id="loader">
     <div class="book__page"></div>
     <div class="book__page"></div>
     <div class="book__page"></div>
