--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 
   <!-- Loader Wrapper -->
 <div id="loader-wrapper">
-  <div id="loader">
-    <div class="book__page"></div>
-    <div class="book__page"></div>
-    <div class="book__page"></div>
-  </div>
+  <div class="loader"></div>
   <p class="loader-text">writing the pages...</p>
 </div>
 
