--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 
   <!-- Sticky Contact Header -->
-  <header class="contact-card">
+  <header class="contact-card pop-once">
     <div class="contact-left">
       <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
       <div class="info">
@@ -40,36 +40,36 @@
   <div id="header-trigger"></div>
 
   <!-- Banner -->
-  <section class="banner">
+  <section class="banner observe-pop">
 <img src= "https://images.unsplash.com/photo-1543251698-10f13f004b0f?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHdpbmRvd3xlbnwwfHwwfHx8MA%3D%3D" alt="Banner">
   </section>
 
   <!-- Welcome Message -->
-  <section class="welcome-message">
+  <section class="welcome-message observe-pop">
     Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
   <!-- Shelf Header -->
-  <section class="shelf-section">
+  <section class="shelf-section observe-pop">
     <h2 class="shelf-header">THE BOOKSHELF</h2>
     <p class="shelf-subtitle">Choose a volume — each book opens a world of its own.</p>
   </section>
 
   <!-- Navigation Cards -->
   <main class="card-wrapper">
-    <div class="container">
+    <div class="container observe-pop">
       <h2 class="title">The Codex</h2>
       <p class="subtitle">A manuscript of memory and identity.</p>
       <a href="about.html" class="btn">Enter</a>
     </div>
 
-    <div class="container">
+    <div class="container observe-pop">
       <h2 class="title">The Portfolio</h2>
       <p class="subtitle">Where hands shape the unseen into form.</p>
       <a href="portfolio.html" class="btn">Enter</a>
     </div>
 
-    <div class="container">
+    <div class="container observe-pop">
       <h2 class="title">The Notebook</h2>
       <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
       <a href="blog.html" class="btn">Enter</a>
