--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Loader Wrapper -->
 
   <!-- Sticky Contact Header -->
+  <div class="background-image observe-pop"></div>
   <header class="contact-card pop-once">
     <div class="contact-left">
       <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
