--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   <!-- Loader Wrapper -->
 
+  <!-- Background Image -->
+<div class="background-image observe-pop"></div>
+
   <!-- Sticky Contact Header -->
-  <div class="background-image observe-pop"></div>
   <header class="contact-card pop-once">
     <div class="contact-left">
       <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
