--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 <body>
 
   <!-- Loader Wrapper -->
+  <div id="loader-wrapper">
+    <div class="loader"></div>
+    <div class="loader-text">Loading the Codex...</div>
+  </div>
 
   <!-- Background Image -->
-<div class="background-image observe-pop"></div>
+  <div class="background-image observe-pop"></div>
 
   <!-- Sticky Contact Header -->
   <header class="contact-card pop-once">
@@ -37,18 +41,18 @@
 
   <!-- Banner -->
   <section class="banner observe-pop">
-<img src= "https://images.unsplash.com/photo-1543251698-10f13f004b0f?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHdpbmRvd3xlbnwwfHwwfHx8MA%3D%3D" alt="Banner">
+    <img src="https://images.unsplash.com/photo-1543251698-10f13f004b0f?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHdpbmRvd3xlbnwwfHwwfHx8MA%3D%3D" alt="Banner">
   </section>
 
   <!-- Welcome Message -->
   <section class="welcome-message observe-pop">
-    Welcome to The Codex — a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
+    Welcome to The Codex â€” a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
   <!-- Shelf Header -->
   <section class="shelf-section observe-pop">
     <h2 class="shelf-header">THE BOOKSHELF</h2>
-    <p class="shelf-subtitle">Choose a volume — each book opens a world of its own.</p>
+    <p class="shelf-subtitle">Choose a volume â€” each book opens a world of its own.</p>
   </section>
 
   <!-- Navigation Cards -->
@@ -72,8 +76,7 @@
     </div>
   </main>
 
-</body>
-  
   <script src="script.js"></script>
 
+</body>
 </html>
