--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Caveat&family=Rustic+Roadway&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta name="theme-color" content="#000000">
+  <meta name="color-scheme" content="dark">
 </head>
 <body>
 
