--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Sticky Contact Header -->
   <header class="contact-card pop-once">
     <div class="contact-left">
-      <img src="https://media0.giphy.com/media/xT8qBmK873CTBspxmg/giphy.gif" alt="Avatar" class="avatar">
+      <img src="favicon.png" alt="Avatar" class="avatar">
       <div class="info">
         <h1 class="name">Clue Y. Encilis</h1>
         <div class="social-icons">
