--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
   <!-- Welcome Message -->
   <section class="welcome-message observe-pop">
-    Welcome to The Codex â€” a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
+    Welcome to The Codex ♡ a curated digital sanctuary where creativity, craftsmanship, and contemplation converge. Here, you'll find a harmonious blend of professional portfolio, thoughtful reflections, and creative experiments. Whether you're seeking insight, inspiration, or collaboration, you're invited to explore a collection that values depth, artistry, and meaningful work.
   </section>
 
   <!-- Shelf Header -->
   <section class="shelf-section observe-pop">
     <h2 class="shelf-header">THE BOOKSHELF</h2>
-    <p class="shelf-subtitle">Choose a volume â€” each book opens a world of its own.</p>
+    <p class="shelf-subtitle">Choose a volume ✿ each book opens a world of its own.</p>
   </section>
 
   <!-- Navigation Cards -->
