--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!-- Navigation Cards -->
   <main class="card-wrapper">
     <div class="container observe-pop">
-      <h2 class="title">The Codex</h2>
+      <h2 class="title">About The Codex</h2>
       <p class="subtitle">A manuscript of memory and identity.</p>
       <a href="about.html" class="btn">Enter</a>
     </div>
