--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
   <!-- Navigation Cards -->
   <main class="card-wrapper">
     <div class="container observe-pop">
-      <h2 class="title">About The Codex</h2>
+      <h2 class="title">Upon This</h2>
       <p class="subtitle">A manuscript of memory and identity.</p>
       <a href="about.html" class="btn">Enter</a>
     </div>
 
     <div class="container observe-pop">
-      <h2 class="title">The Portfolio</h2>
+      <h2 class="title">The Atelier</h2>
       <p class="subtitle">Where hands shape the unseen into form.</p>
       <a href="portfolio.html" class="btn">Enter</a>
     </div>
 
     <div class="container observe-pop">
-      <h2 class="title">The Notebook</h2>
+      <h2 class="title">Chronicles</h2>
       <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
       <a href="blog.html" class="btn">Enter</a>
     </div>
