--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Loader Wrapper -->
   <div id="loader-wrapper">
     <div class="loader"></div>
-    <div class="loader-text">Loading the Codex...</div>
+    <div class="loader-text">Writing the pages...</div>
   </div>
 
   <!-- Background Image -->
