--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
       <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
       <a href="blog.html" class="btn">Enter</a>
     </div>
+    
+    <!--- Add more cards--->
+
+    <!----
+    <div class="container observe-pop">
+      <h2 class="title">Title</h2>
+      <p class="subtitle">subtitle.</p>
+      <a href="title.html" class="btn">Enter</a>
+    </div>
+      --->
+
   </main>
 
   <script src="script.js"></script>
