--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
       <p class="subtitle">A shelf of unfinished dreams & stray sparks.</p>
       <a href="blog.html" class="btn">Enter</a>
     </div>
+
+   <div class="container observe-pop">
+      <h2 class="title">To be written</h2>
+      <p class="subtitle">One day...</p>
+      <a href="title.html" class="btn">Enter</a>
+    </div>
     
     <!--- Add more cards--->
 
